# werb

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-web.yml  release-desktop.yml
apps/desktop/: index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/desktop/scripts/: capture-screenshots.mjs
apps/desktop/src/: App.tsx  design-tokens-showcase.tsx  main.tsx  styles.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ErrorBoundary.tsx  SensoryRadar.tsx
apps/desktop/src/components/editor/: Fields.tsx
apps/desktop/src/data/: browser-fs.ts  cost.ts  enum-labels.ts  equipment.ts  errors.ts  i18n.ts  import-dedup.ts  inventory.ts  library-sort.ts  moneaudebrassage.ts  preferences.tsx  prices.ts  recipe-export.ts  recipes.ts  runtime.ts  session-pdf.ts  units-format.ts
apps/desktop/src/data/catalog/: cultures.ts  fermentables.ts  hops.ts  index.ts  miscs.ts  styles.ts  types.ts  water-profiles.ts
apps/desktop/src/hooks/: useBrewLog.ts  useBrewSession.ts  useEquipment.ts  useIngredientRows.ts  useInventory.ts  usePriceCatalog.ts  useRecipes.ts
apps/desktop/src/screens/: Brew.tsx  Equipment.tsx  Inventory.tsx  Journal.tsx  Library.tsx  Recipe.tsx  RecipeEditor.tsx  Settings.tsx
apps/desktop/src/screens/Brew/: HopSchedule.tsx  MeasurementsSection.tsx  Section.tsx  TastingSection.tsx  format.ts
apps/desktop/src/screens/Recipe/: CarbFields.tsx  CarbonationSection.tsx  CostSection.tsx  Section.tsx  StyleGauge.tsx  TastingCard.tsx  Tile.tsx  WaterChemistrySection.tsx  YeastPitchSection.tsx  styleFit.ts
apps/desktop/src/storage/: backend.ts  context.tsx  github-recipes.ts  github.ts  index.ts  local-storage.ts  memory.ts  migrate.ts  opfs.ts  use-persisted-json.ts
apps/desktop/test/: beerjson-roundtrip.test.ts  beerxml-to-beerjson.test.ts  browser-fs-runtimes.test.ts  browser-fs.test.ts  catalog.test.ts  cost.test.ts  equipment-integration.test.ts  examples-valid.test.ts  fermentable-category.test.ts  file-picker-runtime.ts  github-recipes.test.ts  github.test.ts  helpers.tsx  i18n.test.ts  import-dedup.test.ts  inventory.test.ts  library-sort.test.ts  migrate.test.ts  moneaudebrassage.test.ts  opfs.test.ts  prices.test.ts  recipe-export.test.ts  session-pdf.test.ts  setup.ts  storage-contract.ts  storage.test.ts  units-format.test.ts  useBrewLog.test.ts  useBrewSession.test.ts  useEquipment.test.ts  useIngredientRows.test.ts  useInventory.test.ts  usePersistedJson.test.ts  useRecipes.test.ts  water-source.test.ts
apps/desktop/test/e2e/: feedback-v0.5.spec.ts  pages.ts  smoke.spec.ts
crates/werb-beerjson/: Cargo.toml
crates/werb-beerjson/src/: generated.rs  lib.rs
crates/werb-beerjson/tools/: Cargo.toml  gen.rs
crates/werb-beerxml/: Cargo.toml  README.md
crates/werb-beerxml-wasm/: Cargo.toml
crates/werb-beerxml-wasm/src/: lib.rs
crates/werb-beerxml/src/: beerjson.rs  error.rs  joliebulle.rs  lib.rs  model.rs  parse.rs
crates/werb-beerxml/tests/: beerjson_conversion.rs  parse_sample.rs
crates/werb-beerxml/tests/fixtures/: joliebulle_v4_sample.json  sample_ipa.beerxml
crates/werb-cli/: Cargo.toml
crates/werb-cli/src/: main.rs
crates/werb-cli/tests/: convert.rs
crates/werb-cli/tests/fixtures/: invalid_recipe.beerjson  valid_recipe.beerjson
design/moodboard/: PROMPTS.md
docs/: ROADMAP.md  SMOKE_TEST.md  book.toml
docs/screenshots/: README.md
docs/src/: SUMMARY.md  architecture.md  beerjson.md  cli.md  contributing.md  install.md  introduction.md  sync.md
examples/: brewdog-punk-ipa-2007.beerjson  cascade-pale-ale.beerjson  double-ipa-mandarina.beerjson  mosaic-smash-neipa.beerjson  oatmeal-stout.beerjson  west-coast-ipa.beerjson
schemas/: werb-equipment.schema.json  werb-session.schema.json
schemas/beerjson/: VENDOR.md
schemas/tools/: carbonation.input.schema.json  carbonation.output.schema.json  color.input.schema.json  color.output.schema.json  equipment-suggest.input.schema.json  equipment-suggest.output.schema.json  gravity.input.schema.json  gravity.output.schema.json  ibu.input.schema.json  ibu.output.schema.json  scale.input.schema.json  scale.output.schema.json  strike-temp.input.schema.json  strike-temp.output.schema.json  water-additions.input.schema.json  water-additions.output.schema.json  water-suggest.input.schema.json  water-suggest.output.schema.json  water.input.schema.json  water.output.schema.json  yeast-pitch.input.schema.json  yeast-pitch.output.schema.json
scripts/: gen-types.mjs  import-beerxml.py  validate-beerjson.mjs
