# Cargo workspace root.
# Lets `cargo check` / `cargo build` work from the repo root and shares
# a single target/ + Cargo.lock across all Rust crates we add later.
[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/werb-beerjson",
  "crates/werb-beerxml",
  "crates/werb-beerxml-wasm",
  "crates/werb-cli",
]
# `crates/werb-beerjson/tools/` is a self-contained generator workspace
# (it pulls in the path-pinned `typify` fork) — exclude it so day-to-day
# `cargo build` from the repo root doesn't drag those deps in.
exclude = ["crates/werb-beerjson/tools"]
