[package]
name = "werb-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line tool for working with Werb-shaped recipe files. Today: convert mixed BeerXML/BeerJSON inputs into a canonical one-file-per-recipe BeerJSON layout. Designed to grow subcommands (validate, push) over time."
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "werb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
# NFKD-normalize recipe names so "Bière de Garde" slugs to
# "biere-de-garde" — matches the TS slugify in apps/desktop so the
# CLI and the in-app push produce byte-identical filenames.
unicode-normalization = "0.1"
werb-beerxml = { path = "../werb-beerxml" }
werb-beerjson = { path = "../werb-beerjson" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
