[package]
name = "werb-desktop"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "werb_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
werb-beerxml = { path = "../../../crates/werb-beerxml" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
